:lipstick: Fix calendar size on small screen
Prevent scroll view on mobile screen by reducing cell min-height
and make view taking all the page height

--- a/src/css/calendar.css
+++ b/src/css/calendar.css
@@ -13,7 +13,7 @@
 }
 
 .calendar--time-slot-group {
-  min-height: 40px;
+  min-height: 30px;
   display: flex;
   flex-flow: column nowrap;
   flex: 1;
@@ -95,6 +95,7 @@
 
 .calendar--day-content {
   display: flex;
+  flex: 1;
   overflow: auto;
 }
 
